# angular-bazel-app-no-ngc

./: .gitignore  BUILD.bazel  MODULE.bazel  README.md  angular.json  defs.bzl  important.txt  package-lock.json  package.json  pnpm-lock.yaml
portal/frontend/: BUILD.bazel  angular.json  package-lock.json  pnpm-lock.yaml  tsconfig.json
portal/frontend/src/app/: app.component.spec.ts  app.component.ts
src/: index.html
src/app/: app.component.ts
