load("@npm//:defs.bzl", "npm_link_all_packages")
load(":defs.bzl", "ng_app", "ng_config")

package(default_visibility = ["//visibility:public"])

# Link npm packages
npm_link_all_packages()

# The Angular application
ng_app(
    name = "no-ngc-example-app",
    project_name = "angular-no-ngc-example-app"
)

ng_config(
    name = "ng-config",
)